--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,29 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <button
-        class="btn btn-primary"
-        (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
-      <br><br>
+      <button class="btn btn-primary" (click)="onlyOdd = !onlyOdd">
+        Only show odd numbers
+      </button>
+      <br /><br />
       <ul class="list-group">
         <div *ngIf="onlyOdd">
-          <li
-          class="list-group-item"
-          *ngFor="let odd of numOdd">
-          {{odd}}
-        </li>
-      </div>
+          <li class="list-group-item"
+          *ngFor="let odd of numOdd"
+          [ngClass]="{odd: odd % 2 !== 0}"
+          [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow': 'transparent'}">
+            {{ odd }}
+          </li>
+        </div>
         <div *ngIf="!onlyOdd">
-          <li
-          class="list-group-item"
-          *ngFor="let even of numEven">
-          {{even}}
-        </li>
-      </div>
+          <li class="list-group-item" *ngFor="let even of numEven"
+           [ngClass]="{odd: even % 2 === 0}"
+           [ngStyle]="{backgroundColor: even % 2 === 0 ? 'grey': 'transparent'}">
+            {{ even }}
+          </li>
+        </div>
       </ul>
       <!-- <ng-template [ngIf]="onlyOdd">
+        ngclass is to add or remove the css and ng style is to add the css here itself
         <p>Only odd</p>
       </ng-template> -->
     </div>
