basic directive use case

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,10 +22,8 @@
           </li>
         </div>
       </ul>
-      <!-- <ng-template [ngIf]="onlyOdd">
-        ngclass is to add or remove the css and ng style is to add the css here itself
-        <p>Only odd</p>
-      </ng-template> -->
+
+      <p appBasicHighlight> style me with a basic directive </p>
     </div>
   </div>
 </div>
