renderer to access the dom and manipulate it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
       </ul>
 
       <p appBasicHighlight> style me with a basic directive </p>
+      <p appBetterHightlight> style me with a basic directive </p>
     </div>
   </div>
 </div>
